# SecureRangeQuery

./: .gitignore  CMakeLists.txt  README.md
.VSCodeCounter/2024-05-20_10-03-17/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
bash/: compile.sh  osm_10_8.log.bk  server.sh  server_cloud.sh  silo.sh  silo_cloud.sh  test.sh
cpp/: AES.cpp  AES.h  TODO  differentialprivacy.cpp  differentialprivacy.h  global.cc  global.cpp  global.h  grid.cpp  grid.h  grid.hpp  server.cpp  silo.cc  silo.cpp  test.cpp
data/: answer.txt  data.txt  data_01.txt  data_02.txt  data_03.txt  data_1.txt  data_2.txt  ip.txt  ip_cloud.txt  query.txt  query_100.txt  result.txt  truth.txt  truth_01.txt  truth_100.txt  truth_tmp.txt
generator/: compute_query_accuracy.py  generate_data.py  generate_query.py  generate_truth.py
proto/: ICDE18.proto
test/: test  test_laplace.cpp  test_serialize.cpp  test_template.cpp
